# Django-testing

./: .gitignore  db.sqlite3  pyproject.toml
django_testing/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
