[tool.poetry]
name = "django-testing"
version = "0.1.0"
description = ""
authors = ["TheRoniOne <ronidani99@hotmail.com>"]
readme = "README.md"
packages = [{ include = "django_testing" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
prospector = { extras = ["with-bandit", "with-mypy"], version = "^1.8.4" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
